<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.story.AddStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/preview_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/preview"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_temp_img" />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/camera"
                app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_image" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_camera"
                app:layout_constraintTop_toBottomOf="@+id/preview_image" />

            <TextView
                android:id="@+id/tv_addDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/btn_camera"
                app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

            <EditText
                android:id="@+id/et_desc"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
                app:layout_constraintStart_toStartOf="@+id/btn_camera"
                app:layout_constraintTop_toBottomOf="@+id/tv_addDesc" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/upload"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/et_desc"
                app:layout_constraintTop_toBottomOf="@+id/et_desc" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progress_bar"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading.json"
                app:lottie_loop="true"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="204dp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>